[FIX] Removed visibility hidden for reset variations

--- a/components/single-product/single-product.css
+++ b/components/single-product/single-product.css
@@ -70,7 +70,6 @@
   background-color: var(--primary_color_light);
   border-radius: 50px;
   margin-left: 12px;
-  visibility: hidden !important;
 }
 
 .reset_variations_alert {
